Implementada várias restricoes em module manager e também mudado o modo como um modulo deve herdar. Ao invésde herdar interface IDefaultModule, herde DefaultModule

--- a/src/Engine/Core/Core.csproj
+++ b/src/Engine/Core/Core.csproj
@@ -64,6 +64,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DefaultModule.cs" />
     <Compile Include="IDefaultModule.cs" />
     <Compile Include="IniParser.cs" />
     <Compile Include="Log.cs" />
