--- a/src/Engine/Core/Core.csproj
+++ b/src/Engine/Core/Core.csproj
@@ -18,7 +18,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\..\..\Binaries\Native\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -37,7 +37,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x64\Debug\</OutputPath>
+    <OutputPath>..\..\..\Binaries\Native\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>x64</PlatformTarget>
@@ -64,7 +64,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BeagleModuleAttribute.cs" />
     <Compile Include="DefaultModule.cs" />
     <Compile Include="IDefaultModule.cs" />
     <Compile Include="IniParser.cs" />
@@ -73,6 +72,8 @@
     <Compile Include="ModuleManager.cs" />
     <Compile Include="Path.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reflection\BeagleModuleAttribute.cs" />
+    <Compile Include="Reflection\ModuleSettingsAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
