--- a/src/Engine/Render/Render.csproj
+++ b/src/Engine/Render/Render.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Module.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Window.cs" />
+    <Compile Include="WindowManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
