--- a/Source/Engine/Cmd/Cmd.csproj
+++ b/Source/Engine/Cmd/Cmd.csproj
@@ -7,12 +7,18 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <!--
     <OutputPath>$(SolutionDir)\Binaries\Native\$(MSBuildProjectName)\</OutputPath>
+    -->
+    <OutputPath>$(SolutionDir)\Binaries\Native\</OutputPath>
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <!--
     <OutputPath>$(SolutionDir)\Binaries\Native\$(MSBuildProjectName)\</OutputPath>
+    -->
+    <OutputPath>$(SolutionDir)\Binaries\Native\</OutputPath>
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
