--- a/Source/Engine/Core/Core.csproj
+++ b/Source/Engine/Core/Core.csproj
@@ -7,21 +7,24 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <!--
     <OutputPath>$(SolutionDir)\Binaries\Native\$(MSBuildProjectName)\</OutputPath>
+    -->
+    <OutputPath>$(SolutionDir)\Binaries\Native\</OutputPath>
     <PlatformTarget>x64</PlatformTarget>
-    <ResolveNuGetPackages>false</ResolveNuGetPackages>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <!--
     <OutputPath>$(SolutionDir)\Binaries\Native\$(MSBuildProjectName)\</OutputPath>
+    -->
+    <OutputPath>$(SolutionDir)\Binaries\Native\</OutputPath>
     <PlatformTarget>x64</PlatformTarget>
-    <ResolveNuGetPackages>false</ResolveNuGetPackages>
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="INIFileParser">
-      <HintPath>..\..\..\Binaries\ThirdParty\INIFileParser\netcoreapp2.1\INIFileParser.dll</HintPath>
-      <Private>false</Private>
-    </Reference>
+    <ProjectReference Include="..\..\ThirdParty\IniFileParser\INIFileParser.csproj">
+      <Private></Private>
+    </ProjectReference>
   </ItemGroup>
 </Project>
