--- a/Source/Engine/Render/Render.csproj
+++ b/Source/Engine/Render/Render.csproj
@@ -7,18 +7,23 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <!--
     <OutputPath>$(SolutionDir)\Binaries\Native\$(MSBuildProjectName)\</OutputPath>
+    -->
+    <OutputPath>$(SolutionDir)\Binaries\Native\</OutputPath>
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <!--
     <OutputPath>$(SolutionDir)\Binaries\Native\$(MSBuildProjectName)\</OutputPath>
+    -->
+    <OutputPath>$(SolutionDir)\Binaries\Native\</OutputPath>
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj">
-      <Private>false</Private>
-    </ProjectReference>
+    <ProjectReference Include="..\..\ThirdParty\CSGL\CSGL_Beagle.csproj" />
+    <ProjectReference Include="..\Core\Core.csproj" />
   </ItemGroup>
 </Project>
