--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -4,5 +4,6 @@
  </Target>
  <PropertyGroup>
     <BaseIntermediateOutputPath>$(SolutionDir)\Intermediate\$(MSBuildProjectName)\</BaseIntermediateOutputPath>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
 </Project>
